# aoc2023

./: CMakeLists.txt  main.cpp
core/: Day.h  Utils.h
days/: Day01.cpp  Day01.h  Day02.cpp  Day02.h  Day03.cpp  Day03.h  Day04.cpp  Day04.h  Day05.cpp  Day05.h  Day06.cpp  Day06.h  Day07.cpp  Day07.h  Day08.cpp  Day08.h  Day09.cpp  Day09.h
input/: 06_2.txt
